test/libsolidity/syntaxTests/userDefinedValueType/non_value_type_contract_err.sol
contract C {}
type MyContract is C;
// ----
// TypeError 8657: (33-34): The underlying type for a user defined value type has to be an elementary value type.
